# cppMicroServicesSandbox

./: BundleManager.cpp  BundleManager.h  CMakeLists.txt  ConsoleLogger.cpp  ConsoleLogger.h  ILogger.h  Loggable.h  main.cpp  testInput
dictionaryService/: Activator.cpp  CMakeLists.txt  IDictionaryService.cpp  IDictionaryService.h
dictionaryService/resources/: manifest.json
test/: CMakeLists.txt  test_BundleManager.cpp
